# hol4-mcp

./: .gitignore  .sandbox  pyproject.toml
hol4_mcp/: __init__.py  hol_cursor.py  hol_file_parser.py  hol_mcp_server.py  hol_session.py
hol4_mcp/pi_extension/: README.md  hol4-mcp.ts
hol4_mcp/sml_helpers/: cheat_finder.sml  etq.sml  tactic_prefix.sml
pi-extension/: README.md  hol4-mcp.ts
repo_prompt/: MAIN.md
tests/: repro_bracket_issue.py  test_hol_cursor.py  test_hol_file_parser.py  test_hol_session.py  test_linearize_with_spans.py  test_mcp_server.py  test_proof_timing.py  test_step_divergence.py  test_tactic_prefix.py  test_verification.py
tests/fixtures/: Holmakefile  failScript.sml  testScript.sml
